--- a/styles/about.css
+++ b/styles/about.css
@@ -252,6 +252,10 @@
         gap: 40px;
         text-align: center;
     }
+
+    /* .img-grid-stagger{
+        display: none;
+    } */
     
     .text-left,
     .text-right {
@@ -274,6 +278,9 @@
 /* 468px və aşağı (Mobile) */
 @media (max-width: 468px) {
     
+     .img-grid-stagger{
+        display: none;
+    }
     /* Hero Section */
     .hero {
         padding: 40px 0;
